deploy/monitoring/build/prometheus-performance.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: prometheus
    app.kubernetes.io/instance: performance
    app.kubernetes.io/name: prometheus
  name: prometheus-performance
  namespace: monitoring
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: prometheus
    operator.prometheus.io/name: performance
  ports:
  - name: http-web
    port: 9090
    protocol: TCP
    targetPort: 9090
  - appProtocol: http
    name: reloader-web
    port: 8080
    protocol: TCP
    targetPort: reloader-web
