deploy/monitoring/build/monitoring-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: monitoring
  namespace: monitoring
  annotations:
    cert.gardener.cloud/issuer: ci-issuer
    cert.gardener.cloud/purpose: managed
    dns.gardener.cloud/class: garden
    dns.gardener.cloud/dnsnames: monitoring-build.prow.gardener.cloud
spec:
  gatewayClassName: envoy-gateway
  listeners:
  - name: https
    protocol: HTTPS
    port: 443
    hostname: monitoring-build.prow.gardener.cloud
    tls:
      mode: Terminate
      certificateRefs:
      - name: monitoring-tls
        namespace: monitoring
    allowedRoutes:
      namespaces:
        from: Same
  - name: http
    protocol: HTTP
    port: 80
    hostname: monitoring-build.prow.gardener.cloud
    allowedRoutes:
      namespaces:
        from: Same
